Tracker async